
2014, June 13th
- fix parsing of predicates to avoid distinct 
  between first arg and args of different types
- allow empty negative formulas to obtain sat problems
- make norm_incr to stop as soons as the formula is unsat
- fix memory deallocation problem for fsat
- 0 errors in sll0a_sat


2014, June 12th
- write test for select_wellformedness (only cond 2)
- add partial treatment of dll in wellformedness
- fixed lecture of minisat result on linux
- fixed bug for emp formula in RHS
- 14 errors in sll0a_entl
- 55 errors in sll0a_sat

2014, June 11th
- indentation of sources done without tabs
- emp formulas generate empty graphs
- pass sll0a_entl benchmark revealed problem in select
- 181 errors in sll0a_entl

2014, June 10th
- checkings of predicate definitions aligned to paper
- dll definition base case accepted
- emp space formula introduced